# ROS-Project

./: simple_rover.urdf
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: weed_bot_description.pc  weed_bot_launch.pc  weed_bot_worlds.pc  your_package_name.pc
devel/share/weed_bot_description/cmake/: weed_bot_descriptionConfig.cmake
devel/share/weed_bot_launch/cmake/: weed_bot_launchConfig.cmake
devel/share/weed_bot_worlds/cmake/: weed_bot_worldsConfig.cmake
devel/share/your_package_name/cmake/: your_package_nameConfig.cmake
src/weed_bot_control/: controllers.yaml
src/weed_bot_description/: CMakeLists.txt
src/weed_bot_description/urdf/: simple_rover.urdf.xacro  wheel.xacro
src/weed_bot_launch/: CMakeLists.txt  keyboard_control.launch
src/weed_bot_worlds/: CMakeLists.txt  simple_world.world
src/your_package_name/: CMakeLists.txt  camera_subscriber.py
